# swarm-logo

./: render.sh  swarm-logo.cabal
app/: Main.hs
