cabal-version:      3.0
name:               swarm-logo
version:            0.1.0.0
-- synopsis:
-- description:
homepage:           https://swarm-game.github.io/
license:            BSD-3-Clause
license-file:       LICENSE
author:             Karl Ostmo
maintainer:         kostmo@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable swarm-logo
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
      base ^>=4.18.2.0,
      diagrams,
      diagrams-lib,
      diagrams-svg,
      diagrams-contrib,
    hs-source-dirs:   app
    default-language: Haskell2010
